added comments about files

--- a/jCarousel/jCarousel.html
+++ b/jCarousel/jCarousel.html
@@ -182,7 +182,7 @@
     </div>
     <footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="/PracticeCode/jCarousel/jquery.jcarousel.js"></script>
+        <script src="/PracticeCode/jCarousel/jquery.jcarousel.js"></script> <!-- Full path needs to be added for code to work -->
         <script>
             (function($) {
                 'use strict';
