--- a/SearchBar/search-bar.html
+++ b/SearchBar/search-bar.html
@@ -7,7 +7,7 @@
     <title>JavaScript Search Bar</title>
     <style>
         #search-submit {
-            background-image: url('/PracticeCode/SearchBar/white-magnifying-glass.png');
+            background-image: url('/PracticeCode/SearchBar/white-magnifying-glass.png'); /* Path needs to be updated for icon to appear */
             background-size: 12px;
             background-position: center;
             background-repeat: no-repeat;
